<package>
    <name>simple_local_planner</name>
    <version>1.14.0</version>
    <description>Simple local planner</description>
    <author>Xin Zhang</author>
    <author>zhangxin.xa@gmail.com</author>
    <maintainer email="zhangxin.xa@gmail.com">Xin Zhang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>base_local_planner</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>

    <export>
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>

</package>


